# compagnie-taxi

./: .coverage  .gitignore  README.md  exemples.py  pyproject.toml  requirements.txt  st_aff.py
.devcontainer/: devcontainer.json
src/compagnie_taxi/: __init__.py  affichage.py  analyse_frequentation.py  reseau.py  reseau_taxi.py  st_aff.py  ville.py
tests/: test_analyse_frequentation.py  test_reseau_taxi.py  test_ville.py  tests_reseau_taxi.py  tests_ville.py
