[project]
name = "compagnie-taxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pierre DUMONT ROTY", email = "pierre-dr@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "networkx",
    "streamlit"
]

[project.scripts]
compagnie-taxi = "compagnie_taxi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
