[project]
name = "compagnie-taxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pierre DUMONT ROTY", email = "pierre-dr@hotmail.com"},
    { name = "Rachel MELLOT", email = "rachel.mellot@etu.univ-tours.fr"}
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "networkx",
    "streamlit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
